Updated cleanUp, added MUI v5

--- a/social-app-mui/public/index.html
+++ b/social-app-mui/public/index.html
@@ -11,6 +11,17 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+    />
+    <style>
+      *{
+        font-family: "Roboto", sans-serif;
+        margin: 0;
+      }
+    </style>
+
     <title>Social App With MUI</title>
   </head>
   <body>
